[package]
name = "specta-util"
description = "High-level utilities for working with Specta"
version = "0.0.9"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/oscartbeaumont/specta"
documentation = "https://docs.rs/specta-util/latest/specta-util"
keywords = ["async", "specta", "rspc", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []

## Support for [serde](https://serde.rs)
serde = ["dep:serde"]

[lints]
workspace = true

[dependencies]
specta = { version = "=2.0.0-rc.22", path = "../specta" }
specta-macros = { version = "=2.0.0-rc.18", path = "../specta-macros", default-features = false, optional = true }
serde = { version = "1.0.228", optional = true, default-features = false }
serde_json = { version = "1.0.145", optional = true, default-features = false, features = ["std"] }
