[package]
name = "specta"
description = "Easily export your Rust types to other languages"
version = "2.0.0-rc.22"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2024"
license = "MIT"
include = ["/src", "/examples", "/LICENCE", "/README.md"]
repository = "https://github.com/specta-rs/specta"
documentation = "https://docs.rs/specta/latest/specta"
keywords = ["async", "specta", "rspc", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]
readme = "../README.md"

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Run `node ./.github/features.js` to update the docs
[features]
default = ["std"]

#! Core Features
## Enable support for the Rust standard library. Enabled by default.
std = []

## Derive macros
derive = ["dep:specta-macros"]

## Support for collecting up a global type map
collect = ["dep:ctor", "specta-macros/DO_NOT_USE_collect"]

#! Features
## Support for exporting the types of Rust functions.
function = ["specta-macros?/DO_NOT_USE_function", "dep:paste"]

#! Compatibility
## Support for [serde-json](https://github.com/serde-rs/json)
serde_json = ["dep:serde_json"]
## Support for [serde_yaml](https://github.com/dtolnay/serde-yaml)
serde_yaml = ["dep:serde_yaml"]
## Support for [toml](https://github.com/toml-rs/toml)
toml = ["dep:toml"]

#! External types
## [uuid](https://docs.rs/uuid) crate
uuid = ["dep:uuid"]
## [uuid](https://docs.rs/ulid) crate
ulid = ["dep:ulid"]
## [chrono](https://docs.rs/chrono) crate
chrono = ["dep:chrono"]
## [time](https://docs.rs/time) crate
time = ["dep:time"]
# [jiff](https://docs.rs/jiff) crate
jiff = ["dep:jiff"]
## [bigdecimal](https://docs.rs/bigdecimal) crate
bigdecimal = ["dep:bigdecimal"]
## [rust_decimal](https://docs.rs/rust_decimal) crate
rust_decimal = ["dep:rust_decimal"]
## [indexmap](https://docs.rs/indexmap) crate
indexmap = ["dep:indexmap"]
## [ipnetwork](https://docs.rs/ipnetwork) crate
ipnetwork = ["dep:ipnetwork"]
## [mac_address](https://docs.rs/mac_address) crate
mac_address = ["dep:mac_address"]
## [bit-vec](https://docs.rs/bit-vec) crate
bit-vec = ["dep:bit-vec"]
## [bson](https://docs.rs/bson) crate
bson = ["dep:bson"]
## [uhlc](https://docs.rs/uhlc) crate
uhlc = ["dep:uhlc"]
## [bytesize](https://docs.rs/bytesize) crate
bytesize = ["dep:bytesize"]
## [glam](https://docs.rs/glam) crate
glam = ["dep:glam"]
## [tokio](https://docs.rs/tokio) crate
tokio = ["dep:tokio"]
## [url](https://docs.rs/url) crate
url = ["dep:url"]
## [either](https://docs.rs/either) crate
either = ["dep:either"]
# [bevy_ecs](https://docs.rs/bevy_ecs) crate
bevy_ecs = ["dep:bevy_ecs"]
# [bevy_input](https://docs.rs/bevy_input) crate
bevy_input = ["dep:bevy_input", "dep:bevy_ecs", "dep:glam"]
# [camino](https://docs.rs/camino) crate
camino = ["dep:camino"]
## [geojson](https://docs.rs/geojson) crate
geojson = ["dep:geojson", "serde_json"]

[lints]
workspace = true

[dependencies]
specta-macros = { version = "=2.0.0-rc.18", optional = true, path = "../specta-macros" }
paste = { version = "1", optional = true }

ctor = { version = "0.6.1", default-features = false, optional = true, features = ["proc_macro"] }

# TODO: To be deprecated
serde_json = { version = "1.0.145", optional = true, default-features = false, features = ["std"] }
serde_yaml = { version = "0.9.34", optional = true, default-features = false, features = [] }
toml = { version = "0.9.8", optional = true, default-features = false, features = ["serde"] }
ulid = { version = "1.2.1", optional = true, default-features = false, features = [] }
uuid = { version = "1.18.1", optional = true, default-features = false, features = [] } # TODO: Downgraded for Bevy (argh)
chrono = { version = "0.4.42", optional = true, default-features = false, features = ["clock"] }
time = { version = "0.3.44", optional = true, default-features = false, features = [] }
bigdecimal = { version = "0.4.9", optional = true, default-features = false, features = [] }
rust_decimal = { version = "1.39.0", optional = true, default-features = false, features = [] }
indexmap = { version = "2.12.1", optional = true, default-features = false, features = ["std"] }     # TODO: Don't require `std`
ipnetwork = { version = "0.21.1", optional = true, default-features = false, features = [] }
mac_address = { version = "1.1.8", optional = true, default-features = false, features = [] }
bit-vec = { version = "0.8.0", optional = true, default-features = false, features = [] }
bson = { version = "3.1.0", optional = true, default-features = false, features = ["compat-3-0-0"] }
uhlc = { version = "0.8.2", optional = true, default-features = false, features = [] }
bytesize = { version = "2.3.0", optional = true, default-features = false, features = [] }
glam = { version = "0.30", optional = true, default-features = false, features = ["std"] }
tokio = { version = "1.48", optional = true, default-features = false, features = ["sync"] }
url = { version = "2.5.7", optional = true, default-features = false }
either = { version = "1.15.0", optional = true, default-features = false }
bevy_ecs = { version = "0.17.3", optional = true, default-features = false, features = ["std"] }
bevy_input = { version = "0.17.3", optional = true, default-features = false, features = ["std", "bevy_reflect"] }
jiff = { version = "0.2", optional = true, default-features = false }
camino = { version = "1.2.1", optional = true, default-features = false }
geojson = { version = "0.24", optional = true, default-features = false }

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] } # TODO: Can we remove this?

[build-dependencies]
rustc_version = "0.4.1"
