[package]
name = "specta-tests"
version = "0.0.0"
edition = "2024"
publish = false
autotests = false

[[test]]
name = "test"
path = "tests/mod.rs"
harness = true

[dependencies]
specta = { path = "../specta", features = ["function", "std", "derive", "serde_json", "serde_yaml", "toml", "chrono", "either", "ulid", "glam"] }
specta-serde = { path = "../specta-serde" }
specta-typescript = { path = "../specta-typescript" }
specta-util = { path = "../specta-util", features = ["serde"] }                # TODO: Remove `serde` feature

serde = { version = "1.0.228", features = ["std", "derive"] }
trybuild = "1.0.116"
wasm-bindgen = "0.2.108"
serde_json = "1.0.149"
serde_yaml = "0.9.34"
toml = "1.0.2"
insta = "1.46.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
either = { version = "1.15", default-features = false }
ulid = { version = "1.2", default-features = false, features = [] }
glam = { version = "0.32", default-features = false, features = ["std"] }
tempfile = "3.25.0"
thiserror = "2.0.18"
