[package]
name = "specta-tests"
version = "0.0.0"
edition = "2024"
publish = false
autotests = false

[[test]]
name = "test"
path = "tests/mod.rs"
harness = true

[dependencies]
specta = { path = "../specta", features = ["function", "std", "derive", "serde_json", "serde_yaml", "toml", "chrono", "either", "error-stack", "ulid", "glam", "ordered-float", "heapless", "semver", "smol_str", "arrayvec", "smallvec", "geojson", "bson"] }
specta-serde = { path = "../specta-serde" }
specta-swift = { path = "../specta-swift" }
specta-typescript = { path = "../specta-typescript" }
specta-zod = { path = "../specta-zod" }
specta-util = { path = "../specta-util", features = ["serde"] }                # TODO: Remove `serde` feature

serde = { version = "1.0.228", features = ["std", "derive"] }
trybuild = "1.0.117"
wasm-bindgen = "0.2.126"
serde_json = "1.0.150"
serde_yaml = "0.9.34"
toml = "1.1.2"
insta = "1.48.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
either = { version = "1.16", default-features = false }
ulid = { version = "1.2", default-features = false, features = [] }
glam = { version = "0.33", default-features = false, features = ["std", "all-types"] }
ordered-float = { version = ">=3, <6", default-features = false }
heapless = { version = ">=0.7, <0.10", default-features = false }
semver = { version = "1", default-features = false }
smol_str = { version = "0.3", default-features = false }
arrayvec = { version = ">=0.6, <0.8", default-features = false }
smallvec = { version = "1", default-features = false }
geojson = { version = "1.0", default-features = false }
tempfile = "3.27.0"
thiserror = "2.0.18"
error-stack = { version = "0.8", default-features = false }
bson = { version = "3", default-features = false, features = ["compat-3-0-0"] }
