[package]
name = "specta-util"
description = ""                                                 # TODO
version = "0.0.1"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oscartbeaumont/specta"
documentation = "https://docs.rs/specta-util/latest/specta-util"
keywords = ["async", "specta", "rspc", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

[[example]]
name = "export"
required-features = ["export", "typescript"]

[features]
default = []

#! Features
## Support for collecting up a global type map
export = ["dep:ctor", "specta-macros/export"]

# TODO: Really it would be nice to avoid lanagues in here???
#! Languages
## Support for [TypeScript](https://www.typescriptlang.org) language exporting
typescript = []

[dependencies]
specta = { path = "../../" }
specta-macros = { path = "../../macros" }
ctor = { version = "0.2.4", optional = true }
once_cell = "1.18.0"
