[package]
name = "example-basic-ts"
version = "0.0.0"
edition = "2024"
private = true

[dependencies]
specta = { path = "../../specta", features = ["derive"] }
specta-typescript = { path = "../../specta-typescript" }
specta-serde = { path = "../../specta-serde" }
serde = { version = "1", features = ["derive"] }
